--- a/index.html
+++ b/index.html
@@ -84,23 +84,23 @@ const BOMB_RADIUS = SUPER_FOOD_RADIUS * 1.3;
 const BOMB_SPEED = PLAYER_SPEED * 1.8;
 
 /***************** 音效设置 *****************/
-const soundElimination = new Audio('sounds/elimination.mp3'); // 电脑蛇被淘汰音效
+const soundElimination = new Audio('elimination.mp3'); // 电脑蛇被淘汰音效
 soundElimination.preload = "auto";
 soundElimination.load();
 soundElimination.play();
-const soundPlayerEliminated = new Audio('sounds/player_eliminated.mp3'); // 玩家蛇被淘汰音效
+const soundPlayerEliminated = new Audio('player_eliminated.mp3'); // 玩家蛇被淘汰音效
 soundPlayerEliminated.preload = "auto";
 soundPlayerEliminated.load();
 soundPlayerEliminated.play();
-const soundSuperFood = new Audio('sounds/superfood.mp3'); // 吃超级食物音效
+const soundSuperFood = new Audio('superfood.mp3'); // 吃超级食物音效
 soundSuperFood.preload = "auto";
 soundSuperFood.load();
 soundSuperFood.play();
-const soundBoundaryHit = new Audio('sounds/boundary.mp3'); // 触碰边界音效
+const soundBoundaryHit = new Audio('boundary.mp3'); // 触碰边界音效
 soundBoundaryHit.preload = "auto";
 soundBoundaryHit.load();
 soundBoundaryHit.play();
-const soundBombHit = new Audio('sounds/explode.mp3'); // 炸弹球碰撞音效
+const soundBombHit = new Audio('explode.mp3'); // 炸弹球碰撞音效
 soundBombHit.preload = "auto";
 soundBombHit.load();
 soundBombHit.play();
