--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>贪吃蛇游戏</title>
 </head>
+<style>
+    div {
+        margin-top: auto;
+        font-family: "华文仿宋", "STFangsong", serif;
+        font-size: x-large;
+    }
+</style>
 <body>
-    <h1>Contents not available.</h1>
-    <h3>Error:No Access!</h3>
+    <div id="prevention">
+        <h1>Contents not available.</h1>
+    <h3>Error: No Access!</h3>
+    </div> 
 </body>
+<script>
+    document.addEventListener('contextmenu',event => event.preventDefault());
+document.addEventListener('keydown', event => {
+    if (event.key === 'F12' || (event.ctrlKey && event.shiftKey && event.key === 'I')) {
+        event.preventDefault();
+    }
+});
+</script>
 </html>
